--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "khaled",
   "license": "ISC",
   "dependencies": {
-    "socket.io-client": "^1.4.6"
+    "socket.io-client": "^1.4.6",
+    "octalbonescript" : "1.0.x"
   }
 }
